--- a/README
+++ b/README
@@ -14,6 +14,10 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 2.0.1
+
+	* Fixed various interface bugs.
+
 Version 2.0.0
 
 	+ Added Comments pipeline item.
