--- a/README
+++ b/README
@@ -14,6 +14,12 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 2.1.0
+
+	+ Added View Support pipeline item.
+	+ Partial coherence algorithm now shows Richardson-Lucy iterations
+	* Fixed various interface bugs.
+
 Version 2.0.1
 
 	* Fixed various interface bugs.
