--- a/README
+++ b/README
@@ -14,6 +14,13 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 2.2.0
+
+	+ ER, HPR and RAAR partial coherence algorithms added.
+	+ Load and save point spread functions added. 
+	* Minor interface improvements and bug fixes.
+	* Fixed bug in shrink wrap support creation method.
+
 Version 2.1.0
 
 	+ Added View Support pipeline item.
