--- a/README
+++ b/README
@@ -14,6 +14,14 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 2.3.0
+
+	+ Check box to pipeline items to optionally exempt from execution.
+	+ XYZ orientation widget. 
+	+ Stacked TIFF file support.
+	* Fixed load array to memory bugs.
+	* Compatibility wxPython 4.  
+
 Version 2.2.0
 
 	+ ER, HPR and RAAR partial coherence algorithms added.
