--- a/README
+++ b/README
@@ -14,6 +14,12 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+
+Version 2.4.0
+
+	+ Memory array manipulation in Python shell.
+	* Fixed animate scene bug.
+
 Version 2.3.1
 
 	+ Check box to pipeline items to optionally exempt from execution.
