--- a/README
+++ b/README
@@ -15,6 +15,11 @@ HISTORY
 ============
 
 
+Version 2.5.0
+
+	+ Compatibility Python 3.
+	* Minor interface improvements and bug fixes.
+
 Version 2.4.0
 
 	+ Memory array manipulation in Python shell.
@@ -130,7 +135,7 @@ Copyright 2011 - 2013 - Marcus C. Newton <Bonsu.Devel@gmail.com>
 Registration number 284653218
 
 Please send any bugs, problems, and proposals to: Bonsu.Devel@gmail.com
-or visit: http://code.google.com/p/bonsu/
+or visit: http://github.com/bonsudev/bonsu
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
