--- a/README
+++ b/README
@@ -3,7 +3,7 @@
 
 NOTES
 ============
-Bonus is a collection of tools and algorithms primarily for the reconstruction of phase information from diffraction intensity measurements.
+Bonsu is a collection of tools and algorithms primarily for the reconstruction of phase information from diffraction intensity measurements.
 If Bonsu is used within article publications, it is requested that authors cite this publication:
 
 Newton M. C., Nishino Y. and Robinson I. K., J. Appl. Cryst. (2012). 45, 840-843
@@ -17,7 +17,7 @@ HISTORY
 
 Version 2.5.0
 
-	+ Compatibility Python 3.
+	+ Compatibility with Python 3.
 	* Minor interface improvements and bug fixes.
 
 Version 2.4.0
