--- a/README
+++ b/README
@@ -14,6 +14,16 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 2.6.0
+
+	+ Scene menu entry for visualisation tools.
+	+ Anti-aliasing menu option.
+	+ Visualisation XYZ orientation widget styling. 
+	+ Visualisation scale bar styling. 
+	+ Specular/diffuse lighting option in visualisation.
+	+ Added Centred Resize function.
+	* Fixed byte/string array view bug in HDF viewer with Python 3.
+	* Fixed 2D visualisation viewport size correction.  
 
 Version 2.5.0
 
@@ -131,7 +141,7 @@ $ bonsu
 
 COPYING / LICENCE
 ============
-Copyright 2011 - 2013 - Marcus C. Newton <Bonsu.Devel@gmail.com>
+Copyright 2011 - 2018 - Marcus C. Newton <Bonsu.Devel@gmail.com>
 Registration number 284653218
 
 Please send any bugs, problems, and proposals to: Bonsu.Devel@gmail.com
