--- a/README
+++ b/README
@@ -14,6 +14,12 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 3.2.0
+
+	+ Custom algorithm design interface.
+	+ Reweighted 2D saddle-point optimisation algorithm.
+	* Minor interface improvements and bug fixes.
+
 Version 3.1.0
 
 	+ Diamond nexus beamline data viewer for I16.
