--- a/README
+++ b/README
@@ -14,9 +14,13 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 3.3.4
+
+	* Bug fixes.
+
 Version 3.3.3
 
-	+ Polyhedron Support Function
+	+ Polyhedron Support Function.
 	* Bug fixes.
 
 Version 3.3.2
