--- a/README
+++ b/README
@@ -14,6 +14,11 @@ doi:10.1107/S0021889812026751
 HISTORY
 ============
 
+Version 3.3.5
+
+	+ Empty Array Function.
+	* Bug fixes.
+
 Version 3.3.4
 
 	* Bug fixes.
